[project]
name = "personal-research-assistant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.104.1",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "groq>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
